# cjm-transcript-verify

./: README.md  demo_app.py  html_ids.html  html_ids.html.md  index.html  index.html.md  models.html  models.html.md  pyproject.toml  robots.txt  search.json  settings.ini  sitemap.xml  utils.html  utils.html.md
cjm_transcript_verify/: _modidx.py  html_ids.py  models.py  utils.py
cjm_transcript_verify/components/: helpers.py  integrity_checks.py  sample_segments.py  step_renderer.py  verification_summary.py
cjm_transcript_verify/routes/: core.py  init.py  sample.py  verify.py
cjm_transcript_verify/services/: verify.py
components/: helpers.html  helpers.html.md  integrity_checks.html  integrity_checks.html.md  sample_segments.html  sample_segments.html.md  step_renderer.html  step_renderer.html.md  verification_summary.html  verification_summary.html.md
nbs/: html_ids.ipynb  index.ipynb  models.ipynb  nbdev.yml  utils.ipynb
nbs/components/: helpers.ipynb  integrity_checks.ipynb  sample_segments.ipynb  step_renderer.ipynb  verification_summary.ipynb
nbs/routes/: core.ipynb  init.ipynb  sample.ipynb  verify.ipynb
nbs/services/: verify.ipynb
routes/: core.html  core.html.md  init.html  init.html.md  sample.html  sample.html.md  verify.html  verify.html.md
services/: verify.html  verify.html.md
tests_manual/: test_verify_service.py
