[build-system]
requires = ["setuptools>=64.0,<76.0"]
build-backend = "setuptools.build_meta"

[project]
name="cjm-transcript-verify"
requires-python=">=3.12"
dynamic = [ "keywords", "description", "version", "dependencies", "optional-dependencies", "readme", "license", "authors", "classifiers", "entry-points", "scripts", "urls"]

[tool.uv]
cache-keys = [{ file = "pyproject.toml" }, { file = "settings.ini" }, { file = "setup.py" }]
