[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "cjm-transcript-verify"
dynamic = ["version"]
description = "A FastHTML verification step for transcript decomposition workflows that queries the context graph database to display integrity checks and sample inspection."
readme = "README.md"
requires-python = ">=3.12"
license = {text = "Apache-2.0"}
authors = [{name = "Christian J. Mills", email = "9126128+cj-mills@users.noreply.github.com"}]
keywords = ['nbdev', 'jupyter', 'notebook', 'python']
classifiers = ["Natural Language :: English", "Intended Audience :: Developers", "Development Status :: 3 - Alpha", "Programming Language :: Python :: 3", "Programming Language :: Python :: 3 :: Only"]
dependencies = ['cjm-plugin-system', 'cjm-graph-plugin-system', 'cjm-graph-domains', 'python-fasthtml', 'cjm-fasthtml-app-core', 'cjm-fasthtml-daisyui', 'cjm-fasthtml-tailwind', 'cjm-fasthtml-lucide-icons', 'cjm-fasthtml-keyboard-navigation', 'cjm-workflow-state', 'cjm-source-provider', 'cjm-fasthtml-interactions']

[project.urls]
Repository = "https://github.com/cj-mills/cjm-transcript-verify"
Documentation = "https://cj-mills.github.io/cjm-transcript-verify"

[project.entry-points.nbdev]
cjm_transcript_verify = "cjm_transcript_verify._modidx:d"

[tool.setuptools.dynamic]
version = {attr = "cjm_transcript_verify.__version__"}

[tool.setuptools.packages.find]
include = ["cjm_transcript_verify"]

[tool.nbdev]
